# SBMC

./: README.md  pyproject.toml  setup.cfg
data/: imdb_embeddings_testBig.pt  imdb_embeddings_trainBig.pt
sbmc/: __init__.py
sbmc/data/: cifar10_test_embeddings.pt  cifar10_train_embeddings.pt  imdb.py
sbmc/methods/: __init__.py  map.py
sbmc/models/: __init__.py  simple_cnn.py  simple_mlp.py
scripts/CIFAR10/: run_cifar10_de.py  run_cifar10_map.py  run_cifar10_sbmc_phmc.py  run_cifar10_sbmc_psmc.py
scripts/IMDb/: run_imdb_de.py  run_imdb_map.py  run_imdb_sbmc_phmc.py  run_imdb_sbmc_psmc.py
scripts/MNIST/: run_mnist_de.py  run_mnist_map.py  run_mnist_sbmc_phmc.py  run_mnist_sbmc_psmc.py
